name:                json-access
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/json-access#readme
license:             BSD3
license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2017 Stéphane Laurent
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag lib-only
  description:
    Do not build the dlls.
  default: True

library
  hs-source-dirs:      src
  exposed-modules:     JsonAccessR.JsonAccess
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , lens-aeson
                     , text
                     , lens
                     , bytestring
                     , vector
                     , aeson-pretty
  default-language:    Haskell2010

executable jsonAccessR
  if flag(lib-only)
    buildable: False
  else
    buildable: True
  hs-source-dirs:      src
  main-is:             JsonAccessR.hs
  build-depends:       base >= 4.7 && < 5
                     , json-access
                     , text
--                     , inline-r
                     , vector
                     , aeson
                     , lens-aeson
                     , lens
                     , bytestring
                     , aeson-pretty
  default-language:    Haskell2010
  if os(windows)
    ghc-options:         -threaded -O2 -shared -fPIC StartEnd.c
  else
    ghc-options:         -threaded -O2 -shared -fPIC -dynamic -lHSrts-ghc8.0.2 StartEnd.c

source-repository head
  type:     git
  location: https://github.com/stla/json-access
